Fix Top Nav Bar with Z-Index and fix formatting

--- a/css/index.css
+++ b/css/index.css
@@ -32,10 +32,12 @@ h1 {
   top: 0;
   left: 0;
   background-color: rgb(41, 41, 41);
+  overflow: hidden;
+  z-index: 100;
 }
 
 .navtop a {
-  padding-right: 300px;
+  margin: 80px;
   text-decoration: none;
   color: #E8E9F3;
 }
@@ -135,7 +137,7 @@ button:hover {
   font-size: 150px;
   line-height: 115px;
   margin-bottom: 75px;
-  /* margin-top: 80px; */
+    /* margin-top: 80px; */
 }
 
 #AKA {
